CAY-2935 Upgrade Cayenne 5.0 to Java 21
syntax upgrade - List.of(..)